--- a/index.html
+++ b/index.html
@@ -8,7 +8,179 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 </head>
-<body>
-    <h1 class="text-cyan-300">hello world</h1>
+<body class="bg-[#F4F7FF]">
+    <header class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10 py-6">
+        <nav class="md:flex space-y-4 md:space-y-0 justify-between items-center bg-white p-6 rounded-md">
+            <!-- nav left -->
+             <div class="flex  justify-center gap-2 items-center">
+                <!-- logo -->
+                 <div>
+                    <img class="w-full" src="assets/logo.png" alt="">
+                 </div>
+                <!-- logo-name -->
+                 <div>
+                    <h1 class="text-3xl font-bold"><span class="font-normal">Dev</span>Board</h1>
+                 </div>
+             </div>
+            <!-- nav right -->
+             <div class="flex justify-center items-center gap-6">
+                <!-- nav-content -->
+                 <div class="flex justify-center items-center gap-2 bg-[#F4F7FF] py-3 px-4 rounded-full">
+                    <img src="assets/checkbox.png" alt="">
+                    <span class="text-2xl font-bold">25</span>
+                 </div>
+                <!-- nav button -->
+                 <div>
+                    <button class="bg-[#F4F7FF] rounded-full p-2 cursor-pointer"><img src="assets/theme-btn.png" alt=""></button>
+                 </div>
+             </div>
+        </nav>
+    </header>
+    <main class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10 py-6">
+
+        <!-- main section -->
+         <main class="grid md:grid-cols-4 gap-4">
+            <!-- main section left -->
+             <section class="bg-white md:col-span-3">
+                <header>
+                    <nav class="grid md:grid-cols-4 grid-cols-1 p-4 gap-4">
+                        <!-- task Assigned -->
+                        <div class="flex justify-center items-center gap-4 bg-[#F4F7FF] rounded-lg py-3">
+                            <!-- checkbox -->
+                            <div class="bg-white p-4 rounded-full">
+                                <img class="w-6" src="assets/checkbox.png" alt="">
+                            </div>
+                            <!-- task number -->
+                             <div>
+                                <p>Task Assigned</p>
+                                <span class="text-3xl font-bold">05</span>
+                             </div>
+                        </div>
+                        <!-- Discover something -->
+                        <div class="col-span-2 flex  justify-start py-6 px-10 items-center gap-3 rounded-lg  bg-linear-to-r from-[#3752FD] to-[#9BA8F8]">
+                            <!-- calendar -->
+                             <div>
+                                <img class="w-15" src="assets/board.png" alt="">
+                             </div>
+                            <!-- text -->
+                             <h1 class="text-white font-medium text-xl">Discover Something <br> New Today!</h1>
+                        </div>
+                        <!-- date -->
+                        <div class="flex justify-center items-center gap-3 bg-[#F4F7FF] rounded-lg py-3">
+                            <!-- image -->
+                             <div class="bg-white p-5 rounded-full">
+                                <img class="w-5" src="assets/calender.png" alt="">
+                             </div>
+                            <!-- date and time -->
+                             <div>
+                                <h1 class="text-xl">Wed ,</h1>
+                                <h1 class="font-bold text-xl">Jul 28 2025</h1>
+                             </div>
+                        </div>
+                    </nav>
+                </header>
+                <!-- cards -->
+                 <div class="grid md:grid-cols-3 p-4 gap-7">
+                    <!-- card-1 -->
+                     <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
+                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <h1 class="text-xl font-medium">Fix Mobile Button Issue</h1>
+                        <p class="bg-white p-3 rounded-md">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <p>Deadline</p>
+                                <h3 class="text-lg font-medium">21 March 2025</h3>
+                            </div>
+                            <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Completed</button>
+                        </div>
+                     </div>
+
+                     <!-- card-2 -->
+                     <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
+                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <h1 class="text-xl font-medium">Fix Mobile Button Issue</h1>
+                        <p class="bg-white p-3 rounded-md">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <p>Deadline</p>
+                                <h3 class="text-lg font-medium">21 March 2025</h3>
+                            </div>
+                            <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Completed</button>
+                        </div>
+                     </div>
+
+                     <!-- card-3 -->
+                     <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
+                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <h1 class="text-xl font-medium">Fix Mobile Button Issue</h1>
+                        <p class="bg-white p-3 rounded-md">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <p>Deadline</p>
+                                <h3 class="text-lg font-medium">21 March 2025</h3>
+                            </div>
+                            <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Completed</button>
+                        </div>
+                     </div>
+
+                     <!-- card-4 -->
+                     <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
+                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <h1 class="text-xl font-medium">Fix Mobile Button Issue</h1>
+                        <p class="bg-white p-3 rounded-md">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <p>Deadline</p>
+                                <h3 class="text-lg font-medium">21 March 2025</h3>
+                            </div>
+                            <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Completed</button>
+                        </div>
+                     </div>
+
+                     <!-- card-5 -->
+                     <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
+                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <h1 class="text-xl font-medium">Fix Mobile Button Issue</h1>
+                        <p class="bg-white p-3 rounded-md">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <p>Deadline</p>
+                                <h3 class="text-lg font-medium">21 March 2025</h3>
+                            </div>
+                            <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Completed</button>
+                        </div>
+                     </div>
+
+                     <!-- card-6 -->
+                     <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
+                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <h1 class="text-xl font-medium">Fix Mobile Button Issue</h1>
+                        <p class="bg-white p-3 rounded-md">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <p>Deadline</p>
+                                <h3 class="text-lg font-medium">21 March 2025</h3>
+                            </div>
+                            <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Completed</button>
+                        </div>
+                     </div>
+                 </div>
+             </section>
+            <!-- main section right -->
+             <section class="bg-white rounded-lg p-6">
+                <header class="flex flex-col justify-center items-center gap-4">
+                    <div class="flex items-center justify-center gap-3">
+                        <img src="assets/activity.png" alt="">
+                        <h1 class="text-lg font-medium">Activity Log</h1>
+                    </div>
+                    <button class="bg-[#3752FD] rounded-md px-4 py-2 text-white">Clear History</button>
+                </header>
+                <main>
+
+                </main>
+             </section>
+         </main>
+
+    </main>
 </body>
 </html>
