--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <!-- tailwind cmd -->
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
-<body>
+<body class="bg-[#F4F7FF]">
     <header class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10 py-6">
         <nav class="md:flex space-y-4 md:space-y-0 justify-between items-center bg-white p-6 rounded-md">
             <!-- nav left -->
@@ -29,6 +29,55 @@
              </div>
         </nav>
     </header>
+    <main class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10  pb-10">
+        <section>
+            <h1 class="text-3xl font-bold text-center pb-1">Blogs</h1>
+
+            <!-- blogs -->
+            <div class="mt-4 space-y-4">
+                <!-- blog-1 -->
+                 <div class="bg-white rounded-lg px-3 py-4">
+                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+
+                    <hr class="border-t-2 border-dashed border-gray-300 mt-4">
+                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                 </div>
+
+                 <!-- blog-2 -->
+                 <div class="bg-white rounded-lg px-3 py-4">
+                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+
+                    <hr class="border-t-2 border-dashed border-gray-300 mt-4">
+                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                 </div>
+
+                 <!-- blog-3 -->
+                 <div class="bg-white rounded-lg px-3 py-4">
+                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+
+                    <hr class="border-t-2 border-dashed border-gray-300 mt-4">
+                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                 </div>
+
+                 <!-- blog-4 -->
+                 <div class="bg-white rounded-lg px-3 py-4">
+                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+
+                    <hr class="border-t-2 border-dashed border-gray-300 mt-4">
+                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                 </div>
+
+                 <!-- blog-5 -->
+                 <div class="bg-white rounded-lg px-3 py-4">
+                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+
+                    <hr class="border-t-2 border-dashed border-gray-300 mt-4">
+                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                 </div>
+
+            </div>
+        </section>
+    </main>
 
     <script src="script/blog.js"></script>
 </body>
