add time function and edit blogs

--- a/blog.html
+++ b/blog.html
@@ -40,39 +40,41 @@
                     <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
 
                     <hr class="border-t-2 border-dashed border-gray-300 mt-4">
-                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                    <p class="pt-2 text-gray-500">In JavaScript there are 6 different ways to select an element such as getElementById , getElementByClassName , getElementByTagName , querySelector , querySelectorAll and getElementByName</p>
                  </div>
 
                  <!-- blog-2 -->
                  <div class="bg-white rounded-lg px-3 py-4">
-                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+                    <h1 class="text-xl font-bold">Question-2: What is the difference between innerHTML, innerText, and textContent </h1>
 
                     <hr class="border-t-2 border-dashed border-gray-300 mt-4">
-                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                    <p class="pt-2 text-gray-500">The difference between innerHTML , innerText and textContent is in innerHTML, it shows HTML content inside an element, including all HTML tags, in innerText, it shows the visible text content of an element, excluding hidden elements  and in textContent, it shows raw text content of an element. </p>
                  </div>
 
                  <!-- blog-3 -->
                  <div class="bg-white rounded-lg px-3 py-4">
-                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+                    <h1 class="text-xl font-bold">Question-3: What is event delegation in the DOM?</h1>
 
                     <hr class="border-t-2 border-dashed border-gray-300 mt-4">
-                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                    <p class="pt-2 text-gray-500">Event delegation is used to when there have many child elements that need the same event handling </p>
                  </div>
 
                  <!-- blog-4 -->
                  <div class="bg-white rounded-lg px-3 py-4">
-                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+                    <h1 class="text-xl font-bold">Question-4: What is event bubbling in the DOM?</h1>
 
                     <hr class="border-t-2 border-dashed border-gray-300 mt-4">
-                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                    <p class="pt-2 text-gray-500">Event bubbling is a type of DOM event propagation where the event first triggers on the innermost target element, and then successively triggers on the parents of the target element in the same nesting hierarchy till it reaches the outermost DOM element</p>
                  </div>
 
                  <!-- blog-5 -->
                  <div class="bg-white rounded-lg px-3 py-4">
-                    <h1 class="text-xl font-bold">Question-1: What are the different ways to select an element in the DOM?</h1>
+                    <h1 class="text-xl font-bold">Question-5: How do you create, add, and remove elements using JavaScript?
+
+                    </h1>
 
                     <hr class="border-t-2 border-dashed border-gray-300 mt-4">
-                    <p class="pt-2 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quo obcaecati ab consequuntur eaque at aspernatur voluptates vero velit hic maiores totam accusamus qui, soluta molestias, veniam eos minima.</p>
+                    <p class="pt-2 text-gray-500">In JavaScript i create a element by using document.createElement("which element i want to create"). Then for adding i use appendChild() and for removing i use removeChild()</p>
                  </div>
 
             </div>
