--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- main section -->
          <section class="grid md:grid-cols-4 gap-4">
             <!-- main section left -->
-             <section class="bg-white md:col-span-3">
+             <section class="bg-white md:col-span-3 rounded-lg">
                 <header>
                     <nav class="grid md:grid-cols-4 grid-cols-1 p-4 gap-4">
                         <!-- task Assigned -->
@@ -104,7 +104,7 @@
 
                       <!-- card-2 -->
                       <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
-                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <button class="px-3 py-2 rounded-md bg-white">CloudSync</button>
                         <h1 class="text-xl font-medium">Add Dark Mode</h1>
                         <div class="bg-white px-3 rounded-md  p-3 pb-5">
                             <p class=" text-gray-400 font-normal line-clamp-2">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -121,7 +121,7 @@
 
                       <!-- card-3 -->
                       <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
-                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <button class="px-3 py-2 rounded-md bg-white">SwiftPay </button>
                         <h1 class="text-xl font-medium">Optimize  Home page </h1>
                         <div class="bg-white px-3 rounded-md  p-3 pb-5">
                             <p class=" text-gray-400 font-normal line-clamp-2">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -138,7 +138,7 @@
 
                       <!-- card-4 -->
                       <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
-                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <button class="px-3 py-2 rounded-md bg-white">Meta</button>
                         <h1 class="text-xl font-medium">Add new emoji 🤲</h1>
                         <div class="bg-white px-3 rounded-md  p-3 pb-5">
                             <p class=" text-gray-400 font-normal line-clamp-2">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -154,8 +154,8 @@
                      </div>
 
                       <!-- card-5 -->
-                      <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
-                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                      <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3"> 
+                        <button class="px-3 py-2 rounded-md bg-white">Google LLC</button>
                         <h1 class="text-xl font-medium">Integrate OpenAI API </h1>
                         <div class="bg-white px-3 rounded-md  p-3 pb-5">
                             <p class=" text-gray-400 font-normal line-clamp-2">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -172,7 +172,7 @@
 
                       <!-- card-6 -->
                       <div class="bg-[#F4F7FF] p-6 rounded-xl space-y-3">
-                        <button class="px-3 py-2 rounded-md bg-white">ShopEase</button>
+                        <button class="px-3 py-2 rounded-md bg-white">Glassdoar</button>
                         <h1 class="text-xl font-medium">Improve Job searching </h1>
                         <div class="bg-white px-3 rounded-md  p-3 pb-5">
                             <p class=" text-gray-400 font-normal line-clamp-2">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -199,7 +199,7 @@
                     <button id="history-btn" class="bg-[#3752FD] rounded-md px-4 py-2 text-white cursor-pointer">Clear History</button>
                 </header>
                 <hr class="border-t-2 border-dashed border-gray-300 mt-4">
-                <main id="history" class="p-3 space-y-3">
+                <main id="history" class="p-3 space-y-4">
 
                 </main>
              </section>
