added some style what i forgoten

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <header class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10 py-6">
-        <nav class="md:flex space-y-4 md:space-y-0 justify-between items-center bg-white p-6 rounded-md">
+        <nav class="md:flex space-y-4 md:space-y-0 justify-between items-center bg-white p-6 rounded-xl">
             <!-- nav left -->
              <div class="flex  justify-center gap-2 items-center">
                 <!-- logo -->
@@ -27,9 +27,9 @@
             <!-- nav right -->
              <div class="flex justify-center items-center gap-6">
                 <!-- nav-content -->
-                 <div class="flex justify-center items-center gap-2 bg-[#F4F7FF] py-3 px-4 rounded-full">
+                 <div class="flex justify-center items-center gap-2 bg-[#F4F7FF] py-2 px-4 rounded-full">
                     <img src="assets/checkbox.png" alt="">
-                    <span id="check-box" class="text-2xl font-bold">25</span>
+                    <span id="check-box" class="text-2xl font-bold">23</span>
                  </div>
                 <!-- nav button -->
                  <div>
@@ -43,11 +43,11 @@
         <!-- main section -->
          <section class="grid md:grid-cols-4 gap-4">
             <!-- main section left -->
-             <section class="bg-white md:col-span-3 rounded-lg">
+             <section class="bg-white md:col-span-3 rounded-xl">
                 <header>
                     <nav class="grid md:grid-cols-4 grid-cols-1 p-4 gap-4">
                         <!-- task Assigned -->
-                        <div class="flex justify-center items-center gap-4 bg-[#F4F7FF] rounded-lg py-3">
+                        <div class="flex justify-center items-center gap-4 bg-[#F4F7FF] rounded-xl py-3">
                             <!-- checkbox -->
                             <div class="bg-white p-4 rounded-full">
                                 <img class="w-6" src="assets/checkbox.png" alt="">
@@ -59,7 +59,7 @@
                              </div>
                         </div>
                         <!-- Discover something -->
-                        <div id="discover" class="col-span-2 flex  justify-start py-6 px-10 items-center gap-3 rounded-lg  bg-linear-to-r from-[#3752FD] to-[#9BA8F8] cursor-pointer">
+                        <div id="discover" class="col-span-2 flex  justify-start py-6 px-10 items-center gap-3 rounded-xl  bg-linear-to-r from-[#3752FD] to-[#9BA8F8] cursor-pointer">
                             <!-- calendar -->
                              <div>
                                 <img class="w-15" src="assets/board.png" alt="">
@@ -68,15 +68,14 @@
                              <h1 class="text-white font-medium text-xl">Discover Something <br> New Today!</h1>
                         </div>
                         <!-- date -->
-                        <div class="flex justify-center items-center gap-3 bg-[#F4F7FF] rounded-lg py-3">
+                        <div class="flex justify-center items-center gap-3 bg-[#F4F7FF] rounded-xl py-3">
                             <!-- image -->
-                             <div class="bg-white p-5 rounded-full">
+                             <div class="bg-white p-4 rounded-full">
                                 <img class="w-5" src="assets/calender.png" alt="">
                              </div>
                             <!-- date and time -->
-                             <div>
-                                <h1 class="text-xl">Wed ,</h1>
-                                <h1 class="font-bold text-xl">Jul 28 2025</h1>
+                             <div id="date">
+                                
                              </div>
                         </div>
                     </nav>
@@ -190,7 +189,7 @@
                  </div>
              </section>
             <!-- main section right -->
-             <section class="bg-white rounded-lg ">
+             <section class="bg-white rounded-xl ">
                 <header class="flex flex-col justify-center items-center gap-4 p-6">
                     <div class="flex items-center justify-center gap-3">
                         <img src="assets/activity.png" alt="">
