added something new

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="body" class="bg-[#F4F7FF]">
 
 
-    <header class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10 py-6">
+    <header class="container mx-auto px-4 md:px-2  py-6">
         <nav class="md:flex space-y-4 md:space-y-0 justify-between items-center bg-white p-6 rounded-xl">
             <!-- nav left -->
              <div class="flex  justify-center gap-2 items-center">
@@ -38,7 +38,7 @@
              </div>
         </nav>
     </header>
-    <main class="container mx-auto px-4 md:px-6 lg:px-8 xl:px-10 py-6">
+    <main class="container mx-auto px-4 md:px-2  py-6">
 
         <!-- main section -->
          <section class="grid md:grid-cols-4 gap-4">
